# MovieManager

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
CMake/: AddGitSubmodule.cmake  Docs.cmake
MovieDataFetcher/: MetaDataProcessor.cpp  MovieData.h  MovieNotFoundException.h  RestApiClient.cpp  TheMovieDbDataFactory.cpp  TheMovieDbRepository.cpp
MovieDataFetcherRunner/: MovieDataFetcherRunner.cpp  main.cpp
MovieDataFetcherTests/: ApiKey.h  MetaDataProcessorTests.cpp  TheMovieDbDataFactoryTests.cpp  TheMovieDbRepositoryTests.cpp  stdafx.cpp
app/: CMakeLists.txt  config.hpp  main.cpp
cmake/: AddGitSubmodule.cmake
configured/: CMakeLists.txt  config.hpp.in
docs/: Doxyfile
docs/html/: _c_make_lists_8txt.html  _error_parsing_movie_data_exception_8h.html  _error_parsing_movie_data_exception_8h_source.html  _error_repository_8h.html  _error_repository_8h_source.html  _file_error_repository_8cpp.html  _file_error_repository_8h.html  _file_error_repository_8h_source.html  _invalid_input_exception_8h.html  _invalid_input_exception_8h_source.html  _json_helper_8cpp.html  _json_helper_8h.html  _json_helper_8h_source.html  _logger_8h.html  _logger_8h_source.html  _meta_data_processor_8cpp.html  _meta_data_processor_8h.html  _meta_data_processor_8h_source.html  _movie_data_8cpp.html  _movie_data_8h.html  _movie_data_8h_source.html  _movie_data_factory_8h.html  _movie_data_factory_8h_source.html  _movie_data_fetcher_2_c_make_lists_8txt.html  _movie_meta_data_repository_8h.html  _movie_meta_data_repository_8h_source.html  _movie_not_found_exception_8h.html  _movie_not_found_exception_8h_source.html  _rest_api_client_8cpp.html  _rest_api_client_8h.html  _rest_api_client_8h_source.html  _settable_movie_data_8h.html  _settable_movie_data_8h_source.html  _string_html_encoder_8h.html  _string_html_encoder_8h_source.html  _the_movie_db_data_factory_8cpp.html  _the_movie_db_data_factory_8h.html  _the_movie_db_data_factory_8h_source.html  _the_movie_db_repository_8cpp.html  _the_movie_db_repository_8h.html  (+50 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+5 more)
src/: CMakeLists.txt
src/MovieDataFetcher/: CMakeLists.txt  ErrorParsingMovieDataException.h  ErrorRepository.h  FileErrorRepository.cpp  FileErrorRepository.h  InvalidInputException.h  JsonHelper.cpp  JsonHelper.h  Logger.h  MetaDataProcessor.cpp  MetaDataProcessor.h  MovieData.cpp  MovieData.h  MovieDataFactory.h  MovieMetaDataRepository.h  MovieNotFoundException.h  RestApiClient.cpp  RestApiClient.h  SettableMovieData.h  StringHtmlEncoder.h  TheMovieDbDataFactory.cpp  TheMovieDbDataFactory.h  TheMovieDbRepository.cpp  TheMovieDbRepository.h
tests/: CMakeLists.txt  FakeLogger.h  FakeLoggerFactory.h  FakeMovieMetaDataRepository.h  FakeRestApiClient.h  JsonHelperTests.cpp  MetaDataProcessorTests.cpp  StringHtmlEncoderTests.cpp  TheMovieDbDataFactoryTests.cpp  TheMovieDbRepositoryTests.cpp  main.cpp
